--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
 		"watch": "tsc --watch",
 		"build": "tsc",
 		"dev": "set \"NODE_ENV=development\" && nodemon ./build/index.js",
-		"start": "set \"NODE_ENV=production\" && node ./build/index.js"
+		"start": "set \"NODE_ENV=production\" && node ./build/index.js",
+		"test": "mocha ./Tests"
 	},
 	"dependencies": {
 		"@discordjs/builders": "^0.8.2",
 		"@discordjs/rest": "^0.1.0-canary.0",
 		"discord-api-types": "^0.24.0",
 		"discord.js": "^13.3.1",
-		"dotenv": "^10.0.0"
+		"dotenv": "^10.0.0",
+		"mocha": "^9.1.3"
 	}
 }
