--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,20 @@
     "skipLibCheck": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "paths": {
+      "*": [
+        "./src/Types/*.d.ts"
+      ]
+    }
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules",".vscode", ".git", ".env"]
+  "include": [
+    "src/**/*",
+    "Tests"
+  ],
+  "exclude": [
+    "node_modules",
+    ".vscode",
+    ".git",
+    ".env"
+  ]
 }
