--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"discord-api-types": "^0.24.0",
 		"discord.js": "^13.3.1",
 		"dotenv": "^10.0.0",
-		"mocha": "^9.1.3"
+		"mocha": "^9.1.3",
+		"reflect-metadata": "^0.1.13"
 	}
 }
