--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"discord.js": "^13.3.1",
 		"dotenv": "^10.0.0",
 		"mocha": "^9.1.3",
-		"reflect-metadata": "^0.1.13"
+		"node-typescript": "^0.1.3",
+		"reflect-metadata": "^0.1.13",
+		"typescript": "^4.5.2"
 	}
 }
