--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
 		"discord-api-types": "^0.24.0",
 		"discord.js": "^13.3.1",
 		"dotenv": "^10.0.0",
-		"mocha": "^9.1.3",
 		"node-typescript": "^0.1.3",
 		"reflect-metadata": "^0.1.13",
 		"typescript": "^4.5.2"
+	},
+	"devDependencies": {
+		"@types/mocha": "^9.0.0",
+		"mocha": "^9.1.3",
+		"ts-node": "^10.4.0"
 	}
 }
